# mcp-deeinfra

./: README.md  pyproject.toml  run_tests.sh
src/mcp_deepinfra/: __init__.py  server.py
tests/: conftest.py  test_server.py  test_tools.py
